styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins', sans-serif;
  text-decoration: none;
  list-style-type: none;
  box-sizing: border-box;
}

body {
  width: 100%;
}

main {
  background-color: hsl(0, 0%, 90%);
  width: 100%;
}

button:hover {
  background-color: #6070ff;
  color: white;
}

button:active {
  background-color: blue;
  color: white;
}

.logo {
  width: 76px;
  height: 20px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 20px;
  color: #6070ff;
}

.logo-div {
  display: flex;
  justify-content: space-between;
  padding: 24px;
  width: 90%;
  margin: 0 auto;
  align-items: center;
}

.p-intro {
  margin-top: 20px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #344563;
}

.h1-intro {
  height: 150px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 40px;
  line-height: 52px;
  color: #172b4d;
}

.intro {
  padding-top: 40px;
}

.navbar {
  width: 100%;
}

.logo a {
  color: #6070ff;
  margin-left: 12px;
}

.sec-content {
  background-color: white;
}

.navbar-items {
  display: none;
}

.second-intro {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 800;
  font-size: 40px;
  position: relative;
  top: 15px;
  color: #172b4d;
}

.connect {
  margin-top: 20px;
  width: 100%;
}

.let-connect {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 16px;
  line-height: 24px;
  color: #7f8cff;
}

.social-media {
  display: flex;
  column-gap: 20px;
  margin-top: 10px;
  margin-bottom: 20px;
  list-style-type: none;
}

.wrapper {
  padding: 120px 40px;
  background-image: url(images/mobile.png);
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-color: white;
  border-bottom-left-radius: 5rem;
}

.sec2,
.sec3,
.sec4,
.sec5 {
  display: grid;
  padding: 24px;
  border-radius: 24px;
  border: 1px solid #dfe1e6;
  margin: auto;
  width: 90%;
  margin-top: 10%;
  background-color: white;
}

.desktop {
  display: none;
}

.about {
  background-color: white;
  display: grid;
  gap: 24px;
  padding: 10%;
  margin: auto;
  margin-top: 10%;
  border-top-right-radius: 5rem;
}

.workplace-image {
  width: 100%;
  height: 280px;
  border-radius: 8px;
}

.set {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 2%;
  list-style: none;
  margin: 12px 0;
}

.tonic {
  width: 295px;
  height: 36px;
  font-family: 'Poppins', sans-serif;
  font-size: 32px;
  font-style: normal;
  font-weight: 700;
  line-height: 52px;
  color: #172b4d;
}

.multi {
  width: 295px;
  height: 80px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 32px;
  line-height: 44px;
  color: #172b4d;
}

.canopy {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  color: #344563;
}

.back {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 600;
  font-size: 13px;
  margin-left: 10px;
  color: #7a869a;
}

.year {
  width: 29px;
  height: 16px;
  font-style: normal;
  font-weight: 600;
  color: #7a869a;
  font-size: 13px;
  line-height: 24px;
  left: 5px;
  bottom: 3px;
  position: relative;
}

.daily {
  font-family: 'Poppins', sans-serif;
  width: 295px;
  height: 76px;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  color: #344563;
}

.list-tech {
  display: flex;
  gap: 10px;
}

.list-tech li {
  font-family: 'Poppins', sans-serif;
  list-style: none;
  background-color: #ebebff;
  padding: 4px 12px;
  border-radius: 8px;
  font-weight: 500;
  font-size: 16px;
  letter-spacing: 0.03em;
  color: #6070ff;
  line-height: 16px;
}

.see-project {
  padding: 12px;
  margin-top: 10px;
  outline: none;
  border-radius: 8px;
  border: 1px solid #396df2;
  font-family: 'Poppins', sans-serif;
  width: fit-content;
  font-size: 17px;
  height: 48px;
  font-weight: 500;
  background-color: white;
  color: #396df2;
  cursor: pointer;
}

.get-resume {
  cursor: pointer;
  height: 48px;
  width: fit-content;
  padding: 12px;
  margin-top: 10px;
  outline: none;
  border-radius: 8px;
  border: 1px solid #396df2;
  font-family: 'Poppins', sans-serif;
  font-size: 17px;
  font-weight: 500;
  background-color: white;
  color: #396df2;
}

.framework {
  display: flex;
  justify-content: space-between;
  margin-top: 25px;
  padding-bottom: 24px;
  border-bottom: 1px solid #ddd;
}

#icon {
  display: flex;
  justify-content: flex-end;
  position: relative;
  bottom: 50px;
}

.separator {
  position: absolute;
  margin-top: 30px;
}

.lang-h {
  margin-bottom: 30px;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 24px;
}

.dot-style {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
}

.tek-p {
  margin-top: 15px;
}

.tek-js {
  margin-bottom: 15px;
  background: #f7f7f9;
  border-radius: 8px;
  border: 1px solid #f7f7f9;
  display: grid;
  padding: 5px 10px;
  grid-template-columns: 20% 80px;
}

.tek-html {
  background: #f7f7f9;
  border-radius: 8px;
  border: 1px solid #f7f7f9;
  margin-bottom: 15px;
  display: grid;
  padding: 5px 10px;
  grid-template-columns: 20% 80px;
}

.tek-css {
  background: #f7f7f9;
  border-radius: 8px;
  border: 1px solid #f7f7f9;
  display: grid;
  padding: 5px 10px;
  grid-template-columns: 20% 80px;
}

footer {
  background-color: #6070ff;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  border-top-left-radius: 5rem;
  row-gap: 20px;
  padding: 7.5rem 0;
  width: 100%;
  background-image: url(images/contact-mobile-1.png);
  background-repeat: no-repeat;
  background-size: 110%;
}

.contact-me {
  font-style: normal;
  font-weight: 700;
  font-size: 40px;
  line-height: 52px;
  font-family: 'Poppins', sans-serif;
  color: #fff;
}

.footer-p {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #ebebff;
  margin-left: 10%;
}

.feedback {
  display: grid;
  row-gap: 20px;
}

.name,
.email {
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  font-family: 'Poppins', sans-serif;
  height: 48px;
  padding: 5px 20px;
  font-weight: 400;
  font-size: 17px;
  line-height: 20px;
  color: #172b4d;
}

.feedback textarea {
  border: 1px solid #cfd8dc;
  border-radius: 8px;
  color: #b3bac5;
  background: #fff;
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  padding: 5px 20px;
}

.get-in-touch {
  font-style: normal;
  font-weight: 500;
  font-size: 17px;
  line-height: 24px;
  color: #6070ff;
  width: 140px;
  padding: 12px 16px;
  background-color: #fff;
  border-radius: 8px;
  border: none;
  margin-top: 12px;
}

.get-in-touch:hover {
  background-color: #6070ff;
  color: white;
}

.get-in-touch:active {
  background-color: blue;
  color: white;
}

@media screen and (min-width: 992px) {
  .mobile {
    display: none;
  }

  .desktop {
    display: flex;
  }

  .about {
    display: grid;
    grid-template-columns: 55% 55%;
  }

  .nav-image {
    display: none;
  }

  .intro-about {
    position: relative;
    right: 100px;
    bottom: 72px;
  }

  .intro-wrapper {
    display: flex;
    flex-direction: column;
    margin-left: 120px;
  }

  .languages {
    position: relative;
    right: 60px;
  }

  .second-intro {
    margin-bottom: 60px;
    line-height: 52px;
  }

  .tonic {
    font-size: 40px;
    margin-bottom: 15px;
  }

  .daily {
    margin-top: 10px;
    width: 460px;
    height: 30px;
  }

  .list-tech li {
    margin-top: 45px;
  }

  .see-project {
    margin-top: 35px;
  }

  .p-intro {
    font-size: 20px;
    line-height: 28px;
    margin-top: -30px;
    word-wrap: break-word;
  }

  .navbar-items {
    display: flex;
    font-style: normal;
    color: #344563;
    justify-content: space-between;
  }

  .nav-container {
    display: flex;
  }

  .nav-container li {
    margin-left: 12px;
  }

  .list-item {
    color: #344563;
    font-family: 'Poppins', sans-serif;
    font-style: normal;
    font-weight: 500;
    font-size: 15px;
    text-decoration: none;
  }

  .wrapper {
    padding: 120px 40px;
    background-image: url(images/wrapper\ desk.png);
    background-repeat: no-repeat;
  }

  .sec-content {
    display: flex;
    height: 400px;
    width: 920px;
  }

  .image-div {
    flex: 1;
    margin-right: 40px;
  }

  .workplace-image {
    height: auto;
    width: 100%;
  }

  .sec-cont {
    margin-top: 30px;
    display: flex;
    flex-direction: column;
    flex: 1;
    margin-left: 10px;
  }

  .blue {
    background-color: #4053fc;
    color: #fff;
  }

  .set-margin {
    position: relative;
    bottom: 30px;
  }

  .d-margin {
    position: relative;
    bottom: 10px;
  }

  .f-margin {
    position: relative;
    top: 20px;
  }

  .b-margin {
    position: relative;
    top: 30px;
  }

  .tek-js {
    display: flex;
    flex-direction: column;
  }

  .tek-css {
    display: flex;
    flex-direction: column;
  }

  .tek-html {
    display: flex;
    flex-direction: column;
  }

  .language-ul {
    display: grid;
    grid-template-columns: 20% 20% 20%;
    gap: 20px;
  }

  footer {
    background-image: url(images/contact-form-bg.png);
    background-repeat: no-repeat;
    background-size: 100%;
  }

  .footer-p {
    height: 102px;
    width: 569px;
    left: 116px;
    top: 68px;
  }

  .name,
  .email {
    height: 48px;
    width: 447px;
  }

  .feedback textarea {
    width: 447px;
    height: 170px;
  }
}

